tests/fixtures/invalid/type_errors/immutable_assignment.luma
-- Assignment to immutable variable
let x = 10
x = 20
